--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint:fix": "next lint --dir . --fix"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.3.0",
     "@next/font": "13.1.6",
-    "@next/mdx": "^13.2.1",
+    "@types/mdx": "^2.0.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
