--- a/package.json
+++ b/package.json
@@ -7,34 +7,35 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir .",
-    "lint:fix": "next lint --dir . --fix"
+    "lint:fix": "next lint --dir . --fix",
+    "type-check": "tsc --noEmit --strict true"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^2.3.0",
-    "@types/mdx": "^2.0.3",
-    "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "date-fns": "^2.29.3",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "gray-matter": "^4.0.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5",
-    "zod": "^3.21.4"
+    "@mdx-js/mdx": "~3.0.1",
+    "@types/mdx": "~2.0.13",
+    "@types/node": "~20.12.12",
+    "@types/react": "~18.3.2",
+    "@types/react-dom": "~18.3.0",
+    "date-fns": "~3.6.0",
+    "eslint": "~8.57.0",
+    "eslint-config-next": "~14.2.3",
+    "gray-matter": "~4.0.3",
+    "next": "~14.2.3",
+    "react": "~18.3.1",
+    "react-dom": "~18.3.1",
+    "typescript": "5.4.5",
+    "zod": "~3.23.8"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.14",
-    "cssnano": "^5.1.15",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "react-feather": "^2.0.10",
-    "tailwindcss": "^3.2.7"
+    "@tailwindcss/line-clamp": "~0.4.4",
+    "@tailwindcss/typography": "~0.5.13",
+    "autoprefixer": "~10.4.19",
+    "cssnano": "~7.0.1",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-prettier": "~5.1.3",
+    "postcss": "~8.4.38",
+    "prettier": "~3.2.5",
+    "react-feather": "~2.0.10",
+    "tailwindcss": "~3.4.3"
   }
 }
