--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "~3.0.1",
+    "@shikijs/rehype": "~1.6.0",
+    "@shikijs/transformers": "~1.6.0",
     "@types/mdx": "~2.0.13",
     "@types/node": "~20.12.12",
     "@types/react": "~18.3.2",
@@ -23,6 +25,7 @@
     "next": "~14.2.3",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
+    "shiki": "~1.6.0",
     "typescript": "5.4.5",
     "zod": "~3.23.8"
   },
